# vipe-toy

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  run.py  setup.py
.github/scripts/: validate_smoke_output.py
.github/workflows/: ci.yml  pages.yml  publish.yml
configs/: default.yaml
configs/pipeline/: default.yaml  panorama.yaml
configs/slam/: default.yaml
csrc/droid_net_ext/: altcorr_kernel.cu
csrc/slam_ext/: geom_kernels.cu  slam.cpp
docs/: about.md  dataset.md  index.md  installation.md  usage.md
docs/reference/: configuration.md
envs/: cu128.yml
scripts/: download_dataset.py  generate_config_docs.py  vipe_to_colmap.py
tests/: test_altcorr_indexed.py  test_config.py  test_graph_buffer_fused_ba.py  test_slam_component_lifetime.py  test_slam_ext_ba_extended.py
vipe/: __init__.py  _paths.py
vipe/cli/: main.py
vipe/config/: __init__.py  base_schema.py  parse.py  pipeline.py  slam.py  streams.py  vipe.py
vipe/ext/: __init__.py  specs.py  xformers.py
vipe/ext/lietorch/: broadcasting.py  group_ops.py  groups.py
vipe/pipeline/: __init__.py  default.py  panorama.py  processors.py
vipe/priors/depth/: __init__.py  adapter.py  alignment.py  dav3.py  moge.py
vipe/priors/depth/dap/: __init__.py  dino.py  model.py
vipe/priors/depth/dav2/: dinov2.py  dpt.py
vipe/priors/depth/dav2/dinov2_layers/: attention.py  block.py  swiglu_ffn.py
vipe/priors/depth/dav2/util/: blocks.py
vipe/priors/depth/dav3/: __init__.py  api.py  cfg.py  utils.py
vipe/priors/depth/dav3/configs/: __init__.py  da3-giant.yaml  da3metric-large.yaml
vipe/priors/depth/dav3/model/: __init__.py  da3.py  heads.py  utils.py
vipe/priors/depth/metric3d/: __init__.py  model_fn.py
vipe/priors/depth/metric3d/model/: dense_pipeline.py  monodepth_model.py
vipe/priors/depth/priorda/: __init__.py  depth_completion.py  priorda.py  sparse_sampler.py  utils.py
vipe/priors/depth/priorda/dav2/: __init__.py  dinov2.py  dpt.py
vipe/priors/depth/unidepth/: __init__.py  layers.py
vipe/priors/depth/unidepth/models/: encoder.py
vipe/priors/depth/unidepth/utils/: geometric.py  misc.py  positional_embedding.py
vipe/priors/depth/unik3d/: __init__.py  unik3d.py
vipe/priors/depth/unik3d/models/: __init__.py  decoder.py  layers.py
vipe/priors/depth/unik3d/utils/: __init__.py  camera.py  geometric.py  misc.py  positional_embedding.py  sht.py
vipe/priors/depth/videodepthanything/: __init__.py  util.py  video_depth.py
vipe/priors/depth/videodepthanything/motion_module/: attention.py
vipe/priors/geocalib/: camera.py  extractor.py  geocalib.py  misc.py
vipe/priors/track_anything/: __init__.py  aot_tracker.py  checkpoints.py  detector.py  seg_tracker.py  segmentor.py
vipe/priors/track_anything/aot/utils/: checkpoint.py  image.py
vipe/priors/track_anything/sam/: predictor.py
vipe/slam/: system.py
vipe/slam/ba/: kernel.py  solver.py  terms.py
vipe/slam/components/: backend.py  buffer.py  factor_graph.py  frontend.py  inner_filler.py
vipe/slam/components/sparse_tracks/: __init__.py
vipe/slam/maths/: matrix.py  retractor.py
vipe/slam/networks/: droid_net.py
vipe/streams/: base.py  frame_dir_stream.py
vipe/utils/: depth.py  geometry.py  io.py  logging.py  misc.py  model_cache.py  morph.py  viser.py  visualization.py  weights.py
(+31 files in other folders)
