[build-system]
requires = ["setuptools>=77", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
]

[tool.mypy]
python_version = "3.10"
files = [
    "run.py",
    "scripts",
    "vipe",
]
exclude = [
    "^build/",
    "^vipe\\.egg-info/",
    "^vipe_results/",
    "^vipe/ext/lietorch/",
    "^vipe/priors/",
]
check_untyped_defs = false
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "ffmpeg",
    "Imath",
    "OpenEXR",
    "pandas",
    "pandas.*",
    "scipy",
    "scipy.*",
    "tqdm",
    "tqdm.*",
    "vipe_ext",
    "vslam",
    "yt_dlp",
]
ignore_missing_imports = true

[project]
name = "nvidia-vipe"
version = "1.1.0"
description = "NVIDIA Video Pose Engine"
authors = [
    {name = "The ViPE Authors", email = "jiahuih@nvidia.com"},
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch",
    "torchvision",
    "click",
    "einops",
    "gdown",
    "huggingface_hub",
    "hydra-core",
    "imageio[ffmpeg]",
    "kornia",
    "matplotlib",
    "ninja",
    "numpy",
    "omegaconf",
    "opencv-python",
    "OpenEXR<3.3.0",
    "pydantic>=2,<3",
    "pillow",
    "python-pycg",
    "ray",
    "rerun-sdk",
    "safetensors",
    "scipy",
    "timm",
    "tqdm",
    "transformers>=4,<5",
    "viser",
]
keywords = ["computer-vision", "depth-estimation", "nvidia", "pose-estimation", "video"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Homepage = "https://research.nvidia.com/labs/toronto-ai/vipe"
Repository = "https://github.com/nv-tlabs/vipe"
Paper = "https://research.nvidia.com/labs/toronto-ai/vipe/assets/paper.pdf"

[dependency-groups]
dev = [
    "build>=1,<2",
    "mypy>=1.15,<2",
    "pre-commit>=4,<5",
    "pytest>=8,<9",
    "ruff>=0.12,<1",
    "twine>=6,<7",
]
docs = [
    "hydra-core",
    "mkdocs>=1.6,<2",
    "omegaconf",
    "pydantic>=2,<3",
]

[project.scripts]
vipe = "vipe.cli.main:main"

[tool.uv]
default-groups = []

[tool.uv.extra-build-dependencies]
nvidia-vipe = [
    {requirement = "torch", match-runtime = true},
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]
torchvision = [
    {index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
